# training-labs-templates

./: .bazelrc  .envrc  .gitignore  .shellcheckrc  BUILD.bazel  README.md  WORKSPACE  maven_install.json  requirements.txt
doc/diagrams/src/: targets-caching.graffle  workspaces-and-repos.graffle
labs/: lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md
project/: .bazelproject
scripts/: .shared.sh  setup  setup-darwin  setup-linux
src/main/java/com/flarebuild/complex/generator/: BUILD.bazel  ComplexGenerator.java
src/main/java/com/flarebuild/hello/: BUILD.bazel  Hello.java
src/main/java/com/flarebuild/message/: BUILD.bazel  Main.java
src/main/proto/: BUILD.bazel  message_object.proto
src/main/python/classifier/: BUILD.bazel  main.py
src/main/python/classifier/model/: my_h5_model.h5
src/main/python/etls/: BUILD.bazel  py_zip.bzl
src/main/python/etls/lor/: BUILD.bazel  simple_bigquery.py  simple_count.py
src/main/python/etls/utils/: BUILD.bazel  utils.py
src/main/python/hello/: BUILD.bazel
src/main/python/json_conversion/: main.py
src/main/python/json_conversion/test/: compare.sh  data.csv  expected.csv  expected.json
src/main/python/message/: BUILD.bazel  message.py
src/test/java/com/flarebuild/complex/: BUILD.bazel  ComplexGeneratorTest.java
src/test/python/classifier/: BUILD.bazel  prediction_test.py
